plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

group 'net.oldust'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name 'md-5-repo'
        url 'https://repo.md-5.net/content/repositories/snapshots/'
    }
    maven {
        name 'sonatype-repo'
        url 'https://oss.sonatype.org/content/repositories/snapshots'
    }
    maven {
        name 'papermc-repo'
        url 'https://papermc.io/repo/repository/maven-public'
    }
    maven {
        name 'bungeecord-repo'
        url 'https://oss.sonatype.org/content/repositories/snapshots'
    }
    maven {
        name 'jitpack'
        url "https://jitpack.io"
    }
    maven {
        name 'velocity'
        url 'https://nexus.velocitypowered.com/repository/maven-public/'
    }
}

dependencies {
    api group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
    api group: 'commons-io', name: 'commons-io', version: '2.6'
    api group: 'redis.clients', name: 'jedis', version: '3.3.0'
    api group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

    api fileTree(dir: 'libraries', include: 'StandModelLib.jar')
    api fileTree(dir: 'libraries', include: 'SmartInvs-1.2.7.jar')

    implementation group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.16.4-R0.1-SNAPSHOT'
    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
    implementation group: 'net.md-5', name: 'bungeecord-api', version: '1.16-R0.4-SNAPSHOT'
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
    implementation group: 'com.velocitypowered', name: 'velocity-api', version: '1.1.3'
    implementation group: 'net.oldust', name: 'dusticity', version: '1.0-DEVELOPMENT'

    implementation(group: "com.github.dmulloy2", name: "ProtocolLib", version: "4.5.1") {
        exclude(group: "com.comphenix.executors")
    }

    implementation fileTree(dir: 'libraries', include: 'nms-1.16.4.jar')

    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
    annotationProcessor 'com.velocitypowered:velocity-api:1.1.3'
}

shadowJar {
    project.configurations.api.canBeResolved = true
    configurations = [project.configurations.api]
    archiveClassifier.set("")
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
            artifactId = 'core'
        }
    }
}

task shadowJarCustomOutput {
    libsDirName = 'C:\\Users\\Ckblck\\Documents\\Oldust\\Server\\plugins'
    shadowJarCustomOutput.dependsOn shadowJar
}

build.dependsOn shadowJar, publishToMavenLocal

